fix secure id and openapi
